--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@invisible/eslint-config": "^1.3.8"
+    "@invisible/eslint-config": "^1.3.8",
+    "eslint": "^6.8.0"
   }
 }
