--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "@invisible/eslint-config": "^1.3.8",
     "eslint": "^6.8.0"
+  },
+  "dependencies": {
+    "process": "^0.11.10"
   }
 }
