--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "weather",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bin/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
+  "bin": {
+    "weather": "bin/index.js"
+  },
   "devDependencies": {
     "@invisible/eslint-config": "^1.3.8",
     "eslint": "^6.8.0"
